add db migrations for photo impl, add tests